default/objects/NVMConnect__DialListAgent__c/NVMConnect__DialListAgent__c.object-meta.xml
<CustomObject>
    <description>Record representing agent assignment to dial list</description>
    <label>Dial List Agent</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Assignment</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dial List Agents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>