default/objects/NVMConnect__DialListAgent__c/fields/NVMConnect__CompletedEntries__c.field-meta.xml
<CustomField>
    <fullName>NVMConnect__CompletedEntries__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Completed Calls</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>