default/objects/NVMConnect__DialListAgent__c/fields/NVMConnect__DialListLookup__c.field-meta.xml
<CustomField>
    <fullName>NVMConnect__DialListLookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dial List</label>
    <referenceTo>NVMConnect__DialList__c</referenceTo>
    <relationshipName>AssignedAgentsLookup</relationshipName>
    <type>Lookup</type>
</CustomField>