default/objects/NVMConnect__DialListAgent__c/fields/NVMConnect__Empty_After_Last_Refresh__c.field-meta.xml
<CustomField>
    <fullName>NVMConnect__Empty_After_Last_Refresh__c</fullName>
    <defaultValue>false</defaultValue>
    <label>List empty after last refresh</label>
    <type>Checkbox</type>
</CustomField>