default/objects/NVMConnect__DialListAgent__c/fields/NVMConnect__Last_Refreshed_On__c.field-meta.xml
<CustomField>
    <fullName>NVMConnect__Last_Refreshed_On__c</fullName>
    <description>Date and time when this list was refreshed (manually, automatically or scheduled)</description>
    <label>Last Refreshed On</label>
    <type>DateTime</type>
</CustomField>