default/objects/NVMConnect__DialListAgent__c/fields/NVMConnect__OutstandingEntries__c.field-meta.xml
<CustomField>
    <fullName>NVMConnect__OutstandingEntries__c</fullName>
    <label>Outstanding Calls</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>