default/objects/NVMConnect__DialListAgent__c/fields/NVMConnect__RefreshJobId__c.field-meta.xml
<CustomField>
    <fullName>NVMConnect__RefreshJobId__c</fullName>
    <description>The Id of queueable job for refreshing list. The job itself should clear that field when processing is finished.</description>
    <label>Refresh Job ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>