default/objects/NVMConnect__DialListAgent__c/fields/NVMConnect__User__c.field-meta.xml
<CustomField>
    <fullName>NVMConnect__User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>AssignedLists</relationshipName>
    <type>Lookup</type>
</CustomField>